# jinn-core

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.py  debug_output_HTF C.json  docker-compose.yml  ingestion.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  starter.py
.devcontainer/: devcontainer.json  docker-compose.yml
config/: settings.py
data/: BYBIT_BTCUSDT_1.json  config_enums.txt  json_enums.txt
help/: .env.example  bybit_ETHUSDT_1.txt  config_enums.txt  ingestion.json  json_enums.txt  optimization.json
src/: __init__.py  app.py  automizer.py  deal_keywords.py  delegator.py  flask_app.py  main.py  math.py  optimizer.py  preprocessor.py  ta.py  tester.py
src/api/: data_formatter.py  formatter.py  server.py
src/constants/: colors.py  deal_styles.py  metrics.py  network.py  signal_codes.py
src/controller/: flask_app.py  preprocessor.py
src/core/: controller.py  delegator.py  enums.py
src/exchanges/: binance_client.py  bybit_client.py  client.py
src/features/: __init__.py
src/http_clients/: binance_http_client.py  bybit_http_client.py
src/infrastructure/: http_client.py
src/model/: automizer.py  db_manager.py  db_reader.py  enums.py  ga.py  ingester.py  math.py  optimizer.py  tester.py
src/shared/: __init__.py  logging_config.py
src/strategies/: __init__.py  registry.py  strategies.py  strategy.py
src/utils/: colors.py  rounding.py
src/web/: app.py  network.py  server.py
tests/: conftest.py  test_strategy.py
tests/enums/: __init__.py  mode.py
tests/templates/: __init__.py  (+2 more)
(+414 files in other folders)
